plugins {
    id 'com.android.application'
    id 'androidx.navigation.safeargs'

    id 'io.sentry.android.gradle' version '5.8.0'
}

// 1. Import classes for file/stream and properties
import java.util.Properties

// 2. Create a Properties object and load from .env if present
def envFile = rootProject.file(".env")     // point to root project's .env
def Properties envProperties = new Properties()

if (envFile.exists()) {
    envProperties.load(new FileInputStream(envFile))
} else {
    logger.warn(".env file not found at ${envFile}")
}

/**
 * Release signing credentials from environment variables
 */
def asgStorePassword = project.hasProperty("ASG_STORE_PASSWORD") ? project.property("ASG_STORE_PASSWORD") : ""
def asgKeyPassword = project.hasProperty("ASG_KEY_PASSWORD") ? project.property("ASG_KEY_PASSWORD") : ""
def asgKeyAlias = project.hasProperty("ASG_KEY_ALIAS") ? project.property("ASG_KEY_ALIAS") : "asg"

android {
    namespace 'com.augmentos.asg_client'
    compileSdk 34


    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17 // Or VERSION_1_8, VERSION_11, etc.
        targetCompatibility JavaVersion.VERSION_17 // Should generally match sourceCompatibility
    }

    signingConfigs {
        debug {
            def debugKeystoreFile = file("../credentials/debug.keystore")
            if (debugKeystoreFile.exists()) {
                storeFile debugKeystoreFile
                storePassword "android"
                keyAlias "androiddebugkey"
                keyPassword "android"
            } else {
                // Fall back to Android's default debug keystore
                def userHome = System.getProperty("user.home")
                storeFile file("${userHome}/.android/debug.keystore")
                storePassword "android"
                keyAlias "androiddebugkey"
                keyPassword "android"
            }
        }
        release {
            storeFile file("../credentials/asg-keystore.jks")
            storePassword = asgStorePassword
            keyAlias = asgKeyAlias
            keyPassword = asgKeyPassword
        }
    }

    buildFeatures {
        aidl = true
    }

    // Disable lint to allow build to proceed despite existing issues
    lintOptions {
        abortOnError false
        checkReleaseBuilds false
    }

    defaultConfig {
        applicationId "com.augmentos.asg_client"

        minSdk 28
        targetSdk 33
        versionCode 10
        versionName "8.0"

        ndk {
            abiFilters "armeabi-v7a", "arm64-v8a"
        }

        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
        testInstrumentationRunnerArguments deviceId: "RZCW92DJWVF"

        // 3. Inject environment variables into BuildConfig
        //    Using them as strings for simplicity.
        //    If you want a boolean, see the note below.

        buildConfigField "String", "MENTRAOS_HOST", "\"${envProperties['MENTRAOS_HOST'] ?: ""}\""
        buildConfigField "String", "MENTRAOS_PORT", "\"${envProperties['MENTRAOS_PORT'] ?: ""}\""
        buildConfigField "String", "MENTRAOS_SECURE", "\"${envProperties['MENTRAOS_SECURE'] ?: ""}\""
    }

    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1,DEPENDENCIES}'
            excludes += '/META-INF/INDEX.LIST'
            excludes += "com/augmentos/augmentoslib/DataStreamType.class"
        }
        // Handle potential conflicts with SSL libraries from StreamPackLite
        pickFirst '**/*.so'
    }

    buildTypes {
        debug {
            signingConfig signingConfigs.debug
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig asgStorePassword ? signingConfigs.release : signingConfigs.debug
        }
    }
}


dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'com.google.android.material:material:1.8.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'androidx.core:core:1.10.1'
    implementation 'com.google.api.grpc:grpc-google-cloud-speech-v1p1beta1:2.6.0'
    implementation 'com.google.flogger:flogger:0.7.4'
    implementation 'com.google.flogger:flogger-system-backend:0.7.4'
    implementation 'com.google.protobuf:protobuf-java:3.21.12'
    implementation 'com.google.protobuf:protobuf-java-util:3.21.12'
    implementation 'joda-time:joda-time:2.12.2'
    implementation 'io.grpc:grpc-okhttp:1.53.0'
    implementation project(':AugmentOSLib')
    implementation 'com.squareup.picasso:picasso:2.8'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:rules:1.5.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    //navigation
    def nav_version = "2.5.3"
    implementation "androidx.navigation:navigation-fragment:$nav_version"
    implementation "androidx.navigation:navigation-ui:$nav_version"
    implementation "androidx.navigation:navigation-runtime:$nav_version"
    implementation "androidx.fragment:fragment:1.5.5"

    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"

    //REST API volley
    implementation 'com.android.volley:volley:1.2.1';

    //EventBus, greenrobot
    implementation("org.greenrobot:eventbus:3.3.1")

    implementation project(path: ":augmentos_core")
    implementation project(path: ':AugmentOSLib')
    implementation project(path: ":SmartGlassesManager")



    //location services
    implementation 'com.google.android.gms:play-services-location:18.0.0'

    //websocket
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'


    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"

    // SGM leftover for ASG connector
    implementation "org.java-websocket:Java-WebSocket:1.5.2"

    // For demo
    implementation 'org.nanohttpd:nanohttpd:2.3.1'

    // Uncomment to use Nordic's BLE library
    implementation 'no.nordicsemi.android:ble:2.4.0'

    // CameraX dependencies
    implementation "androidx.camera:camera-core:1.3.0"
    implementation "androidx.camera:camera-camera2:1.3.0"
    implementation "androidx.camera:camera-lifecycle:1.3.0"
    implementation "androidx.camera:camera-view:1.3.0"
    implementation "androidx.camera:camera-extensions:1.3.0"

    // StreamPackLite dependencies
    implementation project(':core')
    implementation project(':extension-rtmp')

    // OkHttp for network requests
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    
    // JSON handling
    implementation 'org.json:json:20210307'
    
    // AVIF encoding/decoding support
    implementation 'com.github.awxkee:avif-coder:1.7.3'

    // Sentry SDK for error reporting
    implementation 'io.sentry:sentry-android:7.5.0'

    // AndroidX Test dependencies
    androidTestImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:rules:1.5.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
}

sentry {
    org = "ahmad-wv"
    projectName = "asg"

    // this will upload your source code to Sentry to show it as part of the stack traces
    // disable if you don't want to expose your sources
    includeSourceContext = true

}
